--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bufferutil": "^4.0.0",
     "discord.js": "^11.3.2",
     "erlpack": "github:discordapp/erlpack",
+    "forever": "^0.15.3",
     "libsodium-wrappers": "^0.7.3",
     "node-opus": "^0.3.0",
     "zlib-sync": "^0.1.4"
